--- a/client/app.json
+++ b/client/app.json
@@ -15,7 +15,7 @@
         "tinted": "./assets/icons/ios-tinted.png"
       },
       "config": {
-        "googleMapsApiKey": "AIzaSyCcHMugv8qXNg10Fi9H5fCCnZkqQWH_DiM"
+        "googleMapsApiKey": ""
       }
     },
     "android": {
@@ -25,7 +25,7 @@
       },
       "config": {
         "googleMaps": {
-          "apiKey": "AIzaSyCcHMugv8qXNg10Fi9H5fCCnZkqQWH_DiM"
+          "apiKey": ""
         }
       }
     },
