--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.6",
     "expo-dev-client": "~5.0.12",
+    "expo-dotenv": "^0.1.0",
     "expo-font": "~13.0.3",
     "expo-google-places-autocomplete": "^1.2.0",
     "expo-haptics": "~14.0.1",
@@ -64,7 +65,7 @@
     "jest": "~29.7.0",
     "jest-expo": "^52.0.0",
     "react-test-renderer": "18.3.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.3.3"
   },
   "private": true
