--- a/client/app.json
+++ b/client/app.json
@@ -47,6 +47,12 @@
         {
           "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
         }
+      ],
+      [
+        "expo-font",
+        {
+          "fonts": ["./assets/fonts/ArialRoundedBold.ttf", "./assets/fonts/DejaVuSansMono-BoldOblique.ttf"]
+        }
       ]
     ],
     "experiments": {
