--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,8 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "lodash.isequal": "^4.5.0",
+    "lottie-react-native": "7.1.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -54,14 +56,14 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "lottie-react-native": "7.1.0"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@react-native-community/cli": "latest",
     "@tsconfig/react-native": "^3.0.5",
     "@types/jest": "^29.5.14",
+    "@types/lodash.isequal": "^4.5.8",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.1",
     "babel-preset-expo": "^12.0.8",
