--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@googlemaps/polyline-codec": "^1.0.28",
     "@gorhom/bottom-sheet": "^5.1.1",
     "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-native-community/slider": "^4.5.6",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
