--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -27,7 +27,7 @@
     "expo": "~52.0.35",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.6",
-    "expo-dev-client": "~5.0.15",
+    "expo-dev-client": "~5.0.19",
     "expo-dotenv": "^0.1.0",
     "expo-font": "~13.0.4",
     "expo-google-places-autocomplete": "^1.2.0",
