--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -17,5 +17,5 @@
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
     "nativewind-env.d.ts"
-  ]
+, "app/component/hooks/useMapNavigation.js"  ]
 }
