automate with makefile

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,9 @@
 PORT=""
 LTA_ACCOUNT_KEY=""
-# GOOGLE_API_KEY=""
 URA_ACCESS_KEY=""
 ONEMAP_EMAIL=""
 ONEMAP_PASSWORD=""
+REDIS_ADDRESS="" # For local development use localhost
+REDIS_PORT="" # Default is 6379
+REDIS_PASSWORD="" # If no password set leave blank
+REDIS_DB="" # Default is 0
