--- a/server/.env.example
+++ b/server/.env.example
@@ -1,9 +1,9 @@
-PORT=""
+PORT="" # Port for the server to run on
 LTA_ACCOUNT_KEY=""
 URA_ACCESS_KEY=""
 ONEMAP_EMAIL=""
-ONEMAP_PASSWORD=""
+ONEMAP_PASSWORD="" 
 REDIS_ADDRESS="" # For local development use localhost
-REDIS_PORT="" # Default is 6379
+REDIS_PORT="" # Default is 6379, if using cointainer doesnt matter it will be overwritten
 REDIS_PASSWORD="" # If no password set leave blank
 REDIS_DB="" # Default is 0
